# HardTimes2025

./: .bazelrc  BUILD  MODULE.bazel  design.md  wrangler.jsonc
db/: BUILD  backgrounds.json  person_name_lists.json  region_name_grammar.json  region_name_lists.json  tags.jsonc
inspect/: BUILD  map.cc  noise.cc  snake.cc
inspect/Watersheds/: diamond_square.js  index.html  perlin.js  render.html  render.js  script.js  simplex.js  squirrel_noise.js  squirrel_noise.wasm  squirrel_noise.wat  style.css  unique_heap.js
main/: BUILD  main.cc
types/: BUILD  culture.h  numeric.h  person.h  region.h  tag.cc  tag.h
